# oddish

./: .gitignore  pyproject.toml  readme.md
oddish/: __init__.py  apple_health_kit.py  browser.py  map_data.py  polygon.py
oddish/health/: __init__.py  apple_health_kit.py  readme.md
oddish/run/: __init__.py  run.py
